--- a/index.css
+++ b/index.css
@@ -648,6 +648,7 @@ footer{
     .pr2 {
         position: relative;
         background-image: url(./cerrajeria.avif);
+        background-image: url(https://static.wixstatic.com/media/bf639c_facd57196c074872ac51d7b906e3f18c~mv2.jpeg/v1/fill/w_980,h_632,al_l,q_85,usm_0.66_1.00_0.01,enc_avif,quality_auto/bf639c_facd57196c074872ac51d7b906e3f18c~mv2.jpeg);
         background-size: cover;
         background-position: center;
         height: 490px;
